<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        android:title="@string/search" />


    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_add"
        app:showAsAction="always"
        android:title="Add">

        <menu>
            <item
                android:id="@+id/add_product"
                android:title="@string/addNewProduct"/>
            <item
                android:id="@+id/add_type_ofProduct"
                android:title="@string/addNewTypeOfProduct"/>

        </menu>

    </item>

</menu>