<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/edittypeofproduct"
    tools:context=".ui.view.EditProductFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/et_namedit"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_namedit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="monospace"
                android:hint="Naziv proizvoda..."
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/et_codeedit"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_codeedit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="monospace"
                android:hint="Šifra proizvoda..."
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="monospace"
                android:text="@string/btnEdit"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>